moduledir = $(datadir)/psi46expert/defaultParametersModule

dist_module_DATA =	addressParameters.dat \
			configParameters.dat \
			dacParameters_C0.dat \
			dacParameters_C1.dat \
			dacParameters_C2.dat \
			dacParameters_C3.dat \
			dacParameters_C4.dat \
			dacParameters_C5.dat \
			dacParameters_C6.dat \
			dacParameters_C7.dat \
			dacParameters_C8.dat \
			dacParameters_C9.dat \
			dacParameters_C10.dat \
			dacParameters_C11.dat \
			dacParameters_C12.dat \
			dacParameters_C13.dat \
			dacParameters_C14.dat \
			dacParameters_C15.dat \
			tbmParameters.dat \
			tbParameters.dat \
			testParameters.dat \
			trimParameters_C0.dat \
			trimParameters_C1.dat \
			trimParameters_C2.dat \
			trimParameters_C3.dat \
			trimParameters_C4.dat \
			trimParameters_C5.dat \
			trimParameters_C6.dat \
			trimParameters_C7.dat \
			trimParameters_C8.dat \
			trimParameters_C9.dat \
			trimParameters_C10.dat \
			trimParameters_C11.dat \
			trimParameters_C12.dat \
			trimParameters_C13.dat \
			trimParameters_C14.dat \
			trimParameters_C15.dat
