rocpsi46digv2dir = $(datadir)/psi46expert/defaultParametersRocPSI46digV2

dist_rocpsi46digv2_DATA =   addressParameters.dat \
                            configParameters.dat \
                            dacParameters_C0.dat \
                            defaultMaskFile.dat \
                            tbmParameters.dat \
                            tbParameters.dat \
                            testParameters.dat \
                            trimParameters_C0.dat
