lib_LTLIBRARIES = libpsi46BasePixel.la

# Program source declarations
libpsi46BasePixel_la_SOURCES = CalibrationTable.cc \
			       ConfigParameters.cc \
			       ControlNetwork.cc \
			       DACParameters.cc \
			       DecoderCalibration.cc \
			       DigitalReadoutDecoder.cc \
			       DoubleColumn.cc \
			       Keithley.cc \
			       Module.cc \
			       Pixel.cc \
		 	       pixel_dtb.cpp \
			       RawPacketDecoder.cc \
			       Roc.cc \
			       SysCommand.cc \
			       TBInterface.cc \
			       TBM.cc \
			       TBMParameters.cc \
			       TBParameters.cc

libpsi46BasePixel_la_CPPFLAGS = -I$(srcdir)/..

noinst_HEADERS = CalibrationTable.h \
		 ConfigParameters.h \
		 ControlNetwork.h \
		 DACParameters.h \
		 DecodedReadout.h \
		 DecoderCalibration.h \
		 DigitalReadoutDecoder.h \
		 DoubleColumn.h \
		 GlobalConstants.h \
		 Keithley.h \
		 Module.h \
		 Pixel.h \
		 pixel_dtb.h \
		 RawPacketDecoder.h \
		 Roc.h \
		 SysCommand.h \
		 TBInterface.h \
		 TBM.h \
		 TBMParameters.h \
		 TBParameters.h